Style and add functionality to mobile nav

--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/dist/css/style-min.css">
+<link rel="stylesheet" href="../dist/css/style-min.css">
 </head>
 
 <body>
 
-    <div class="app">
+    <div class="bg-shadow"></div>
+    <div class="app position-relative">
         <nav class="nav d-flex justify-content-between">
             <div class="nav-left d-flex flex-row-reverse flex-md-row align-items-center gap-2">
-                <img src="/dist/images/logo.svg" alt="logo">z
-                <img class="burger-btn" src="/dist/images/icon-menu.svg" alt="nav icon">
-                <ul class="nav-left-ul d-flex flex-column">
-                    <img src="/dist/images/icon-close.svg" alt="close menu">
-                    <li><a href="#">Collections</a></li>
-                    <li><a href="#">Men</a></li>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                <img src="../dist/images/logo.svg" alt="logo">
+                <img class="btn open-nav" src="../dist/images/icon-menu.svg" alt="nav icon">
+                <ul class="nav-left-ul d-flex flex-column align-items-start p-4">
+                    <img class="btn close-nav" src="../dist/images/icon-close.svg" alt="close menu">
+                    <li><a class="nav-left-ul-li-item" href="#">Collections</a></li>
+                    <li><a class="nav-left-ul-li-item" href="#">Men</a></li>
+                    <li><a class="nav-left-ul-li-item" href="#">Women</a></li>
+                    <li><a class="nav-left-ul-li-item" href="#">About</a></li>
+                    <li><a class="nav-left-ul-li-item" href="#">Contact</a></li>
                 </ul>
             </div>
             <div class="nav-right d-flex align-items-center gap-4">
-                <img src="/dist/images/icon-cart.svg" alt="cart">
-                <img class="avatar" src="/dist/images/image-avatar.png" alt="user avatar">
+                <img src="../dist/images/icon-cart.svg" alt="cart">
+                <img class="avatar" src="../dist/images/image-avatar.png" alt="user avatar">
             </div>
         </nav>
+
+        <img src="../dist/images/image-product-1.jpg" alt="">
+        <!-- <img src="../dist/images/image-product-1.jpg" alt=""> -->
     </div>
 
 
