--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../dist/css/style-min.css">
+<link rel="stylesheet" href="./dist/css/style-min.css">
 </head>
 
 <body>
@@ -18,11 +18,11 @@
         <div class="app position-relative">
             <nav class="nav d-flex justify-content-between">
                 <div class="nav-left d-flex flex-row-reverse flex-md-row align-items-start align-items-md-start gap-2">
-                    <img class="my-auto" src="../dist/images/logo.svg" alt="logo">
-                    <img class="btn open-nav d-md-none" src="../dist/images/icon-menu.svg" alt="nav icon">
+                    <img class="my-auto" src="./dist/images/logo.svg" alt="logo">
+                    <img class="btn open-nav d-md-none" src="./dist/images/icon-menu.svg" alt="nav icon">
                     <ul
                         class="nav-left-ul d-flex flex-column flex-md-row align-items-start align-items-md-center p-4 p-md-0">
-                        <img class="btn close-nav d-md-none" src="../dist/images/icon-close.svg" alt="close menu">
+                        <img class="btn close-nav d-md-none" src="./dist/images/icon-close.svg" alt="close menu">
                         <li><a class="nav-left-ul-li-item" href="#">Collections</a></li>
                         <li><a class="nav-left-ul-li-item" href="#">Men</a></li>
                         <li><a class="nav-left-ul-li-item" href="#">Women</a></li>
@@ -31,8 +31,8 @@
                     </ul>
                 </div>
                 <div class="nav-right d-flex align-items-center gap-4">
-                    <img src="../dist/images/icon-cart.svg" alt="cart">
-                    <img class="avatar" src="../dist/images/image-avatar.png" alt="user avatar">
+                    <img src="./dist/images/icon-cart.svg" alt="cart">
+                    <img class="avatar" src="./dist/images/image-avatar.png" alt="user avatar">
                 </div>
             </nav>
 
@@ -51,7 +51,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/dist/js/script-min.js"></script>
+<script src="./dist/js/script-min.js"></script>
 </body>
 
 </html>
