Fix display issues on tablets resolution

--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
         <main class="main mx-auto">
             <div class="main-container d-flex flex-column flex-md-row justify-content-between">
                 <div class="col col-12 col-md-6">
-                    <div class="main-container-image-box position-relative">
-                        <div class="big-image-box"> <img class="main-container-image-box-product-image"
+                    <div class="main-container-image-box d-flex flex-row flex-md-column position-relative">
+                        <div class="big-image-box">
+                             <img class="main-container-image-box-product-image"
                                 src="./dist/images/image-product-1.jpg" alt="shoes photo">
-                            <button class="arrows arrows-arrow-left">
+                            <button class="arrows d-sm-none arrows-arrow-left">
                                 <img class="arrows-button-arrow" src="./dist/images/icon-previous.svg"
                                     alt="arrow previous">
                             </button>
-                            <button class="arrows arrows-arrow-right">
+                            <button class="arrows d-sm-none arrows-arrow-right">
                                 <img class="arrows-button-arrow" src="./dist/images/icon-next.svg" alt="arrow previous">
                             </button>
                         </div>
 
-                        <div class="main-container-image-box-images-list d-none d-md-flex justify-content-between">
+                        <div class="main-container-image-box-images-list d-none d-sm-flex flex-sm-column flex-md-row justify-content-between">
                             <div> <img src="./dist/images/image-product-1-thumbnail.jpg" alt="shoes image">
                             </div>
                             <div> <img src="./dist/images/image-product-2-thumbnail.jpg" alt="shoes image">
