--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="nav-right d-flex align-items-center gap-4 position-relative">
-                <div class="checkout-popup z-3">
+                <!-- <div class="checkout-popup z-3">
     <div class="checkout-top">
         <h3 class="checkout-heading p-2 p-sm-4 mb-0">Cart</h3>
     </div>
@@ -51,8 +51,20 @@
             <button class="button checkout-btn border-0 mt-4">Checkout</button>
         </div>
     </div>
-</div>
-                <img class="cart " src="./dist/images/icon-cart.svg" alt="cart">
+</div> -->
+<!-- <div class="checkout-popup z-3">
+    <div class="checkout-top">
+        <h3 class="checkout-heading p-2 p-sm-4 mb-0">Cart</h3>
+    </div>
+    <div class="checkout-body m-2 m-sm-4">
+        <h2 class="d-flex justify-content-center align-items-center">Your cart is empty.</h2>
+    </div>
+</div> -->
+                <svg class="cart" width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+    <path
+        d="M20.925 3.641H3.863L3.61.816A.896.896 0 002.717 0H.897a.896.896 0 100 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 002.717-2.717 2.72 2.72 0 00-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 00.817-.677l1.821-7.283a.897.897 0 00-.87-1.114zM6.358 18.208a.926.926 0 010-1.85.926.926 0 010 1.85zm10.015 0a.926.926 0 010-1.85.926.926 0 010 1.85zm2.021-7.243l-13.8.81-.57-6.341h15.753l-1.383 5.53z"
+        fill="#69707D" />
+</svg>
                 <img class="avatar" src="./dist/images/image-avatar.png" alt="user avatar">
             </div>
         </nav>
@@ -106,9 +118,9 @@
                 </div>
                 <div class="buttons d-md-flex gap-3">
                     <div class="amount-input d-flex align-items-center justify-content-between">
-                        <img class="signs p-2" src="./dist/images/icon-minus.svg" alt="minus icon">
+                        <img class="signs minus p-2" src="./dist/images/icon-minus.svg" alt="minus icon">
                         <p class="current-value my-auto">0</p>
-                        <img class="signs p-2" src="./dist/images/icon-plus.svg" alt="plus icon">
+                        <img class="signs plus p-2" src="./dist/images/icon-plus.svg" alt="plus icon">
                     </div>
 
                     <button class="button add-btn d-flex justify-content-center align-items-center border-0 gap-3">
@@ -123,7 +135,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./dist/js/script-min.js"></script>
+<script src="./dist/js/modal-min.js"></script>
+<script src="./dist/js/nav-min.js"></script>
 </body>
 
 </html>
