Fix display issue for every device type

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         <div class="main-container d-flex flex-column flex-md-row justify-content-between">
             <div class="col col-12 col-md-6">
                 <div class="main-container-image-box d-flex flex-row flex-md-column position-relative">
-                    <div class="big-image-box z-0">
-                        <div class="swiper">
+                    <div class="main-container-image-box-big-image-box z-0 ">
+                        <div class="swiper ">
                             <button class="arrows d-sm-none arrows-arrow-left z-3">
     <img class="arrows-button-arrow" src="./dist/images/icon-previous.svg" alt="arrow previous">
 </button>
 <button class="arrows d-sm-none arrows-arrow-right z-3">
     <img class="arrows-button-arrow" src="./dist/images/icon-next.svg" alt="arrow previous">
 </button>
-                            <div class="swiper-wrapper">
+                            <div class="swiper-wrapper ">
                                 <img class="main-container-image-box-product-image swiper-slide"
                                     src="./dist/images/image-product-1.jpg" alt="shoes photo">
 
